src/app/burger-menu/burger-menu.component.scss
.burger-menu-layer {
  position: fixed;
  width: 100vw;
  height: 100vh;
  background-color: #141d2f83;
  z-index: 99;
  animation: moveRight 0.25s ease-in-out;
}

.burger-menu-links {
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;

  a {
    font-size: 53px;
    font-weight: 400;
    line-height: 27.6px;
    color: white;
    text-decoration: none;
    margin-bottom: 100px;

    &:last-child {
      margin-bottom: 0;
    }
  }
}

@keyframes moveRight {
  0% {
    transform: translateX(150%); /* Start off-screen to the left */
  }

  100% {
    transform: translateX(0%); /* Return to the starting position */
  }
}

@media (max-width: 700px) {
  .burger-menu-links {
    a {
      font-size: 40px;
      margin-bottom: 60px;
    }
  }
}

@media (max-width: 600px) {
  .burger-menu-links {
    a {
      font-size: 30px;
      margin-bottom: 40px;
    }
  }
}

@media (max-width: 400px) {
  .burger-menu-links {
    a {
      font-size: 23;
      margin-bottom: 33px;
    }
  }
}

